--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   uuid: ^4.5.1
   google_maps_flutter: ^2.12.3
   geolocator: ^14.0.2
+  web_socket_channel: ^3.0.3
+  get_storage: ^2.1.1
+  intl_phone_field: ^3.2.0
+  flutter_map: ^8.2.1
+  latlong2: ^0.9.1
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
