--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_map: ^8.2.1
   latlong2: ^0.9.1
   http: ^1.5.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
